# carla_sensor_kit

./: .gitignore  CLAUDE.md  Makefile  README.md  pytest.ini
carla_sensor_kit_description/: CMakeLists.txt  package.xml
carla_sensor_kit_description/config/: sensor_kit_calibration.yaml
carla_sensor_kit_description/urdf/: sensor_kit.xacro
carla_sensor_kit_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
carla_sensor_kit_launch/config/: concatenate_and_time_sync_node.param.yaml
carla_sensor_kit_launch/launch/: cameras.launch.xml  gnss.launch.xml  imu.launch.xml  lidar.launch.xml  pointcloud_preprocessor.launch.py  sensing.launch.xml
carla_sensor_kit_utils/: package.xml  setup.py
carla_sensor_kit_utils/carla_sensor_kit_utils/: vehicle_monitor.py  vehicle_spawner.py
carla_sensor_kit_utils/launch/: vehicle_spawner.launch.py
doc/: ARCH.md  CARLA_ROS_TOPICS.md  DESIGN.md  DESIGN_SPAWN.md  DESIGN_TEST.md  DESIGN_VEHICLE.md  ROADMAP.md  WORKFLOW.md
scripts/: README.md  carla.rs  cleanup_carla.py  ros_env.sh  run_carla_autoware.py  sensor_config_loader.py  simple_spawn_integrated.py  simple_spawn_integration.patch  simple_spawn_integration.py  spawn_vehicle.py  test_camera_ros2.py  test_carla_connection.py  test_sensor_placement.py
src/carla_sensor_kit_utils/: MANIFEST.in  setup.cfg  setup.py
src/carla_sensor_kit_utils/carla_sensor_kit_utils/: __init__.py  __main__.py  carla_ros_bridge.py  description_publisher.py  package_generator.py  parameter_extractor.py  reset_carla.py  sensor_config_loader.py  (+3 more)
src/carla_sensor_kit_utils/carla_sensor_kit_utils/templates/carla_sensor_kit_launch/: CMakeLists.txt
src/carla_sensor_kit_utils/carla_sensor_kit_utils/templates/carla_sensor_kit_launch/config/: carla_bridge.param.yaml.j2
src/carla_sensor_kit_utils/carla_sensor_kit_utils/templates/carla_sensor_kit_launch/launch/: camera.launch.xml.j2  carla_bridge.launch.xml.j2  gnss.launch.xml.j2  imu.launch.xml  imu.launch.xml.j2  lidar.launch.xml  lidar.launch.xml.j2  pointcloud_preprocessor.launch.py  pointcloud_preprocessor.launch.py.j2  sensing.launch.xml.j2
src/carla_sensor_kit_utils/carla_sensor_kit_utils/templates/carla_vehicle_launch/: CMakeLists.txt  package.xml
src/carla_sensor_kit_utils/carla_sensor_kit_utils/templates/carla_vehicle_launch/launch/: vehicle_interface.launch.py  vehicle_interface.launch.xml  vehicle_interface_topic_based.launch.py
src/carla_sensor_kit_utils/carla_sensor_kit_utils/templates/carla_vehicle_launch/src/: carla_vehicle_interface.py
src/carla_sensor_kit_utils/carla_sensor_kit_utils/templates/carla_vehicle_launch/test/: test_vehicle_interface.py
test/: __init__.py
test/integration/: __init__.py  test_sensor_poses.py  test_topic_remapping.py
test/performance/: __init__.py
test/unit/: __init__.py  test_config_loading.py
(+16 files in other folders)
