<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_vehicle_launch</name>
  <version>0.1.0</version>
  <description>CARLA vehicle interface and launch package</description>
  <maintainer email="carla@example.com">CARLA Integration Team</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <!-- Launch dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  
  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>autoware_auto_control_msgs</exec_depend>
  <exec_depend>autoware_auto_vehicle_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>carla_sensor_kit_utils</exec_depend>
  <exec_depend>carla_vehicle_description</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
